--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,15 @@
 
 .backview {
   background-color: #3338;
-
   width: 100vw;
   height: 100vh;
   overflow: hidden;
 }
 .intro {
-  position: absolute;
   width: 500vw;
   height: 100vh;
   display: flex;
+  transition: all 0.25s;
 }
 
 .page {
@@ -57,7 +56,7 @@
 }
 .page img {
   width: max-content;
-  height: 35vh;
+  height: 30vh;
 }
 .page p {
   width: 100%;
@@ -65,6 +64,7 @@
 
 .page .page_footer {
   bottom: 20px;
+  width: 90%;
   padding: 18px 10px 18px 30px;
   background-image: url("assets/8.png");
   background-size: 100% 100%;
@@ -90,4 +90,42 @@
 
 .page .prev {
   background-image: url("assets/6.png");
+}
+
+.coeinha {
+  padding-top: 70px;
+  position: relative;
+}
+
+.coeinha .ears {
+  top: 0;
+  left: 36px;
+  position: absolute;
+  height: 20vh;
+}
+
+.ovos_perdidos {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.item_ovo {
+  background-color: #ddd;
+  display: flex;
+  border-radius: 5px;
+  height: 60px;
+}
+
+.icone_ovo {
+  background-image: url("assets/16.png");
+  background-size: 162px 120px;
+  height: 60px;
+  width: 52px;
+  background-position: 52px 60px;
+}
+.icone_key {
+  height: 50px;
+  padding: 5px 14px;
 }
