--- a/src/App.css
+++ b/src/App.css
@@ -104,20 +104,100 @@
   height: 20vh;
 }
 
+.main_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.header {
+  padding: 10px;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  height: 30%;
+}
+
+.dicas_count {
+  background-color: #ddd;
+  border-radius: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  padding: 5px 10px;
+  width: 30%;
+  height: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+.dicas_count div {
+  display: flex;
+  gap: 8px;
+  align-content: center;
+}
+.dicas_count img {
+  height: 100%;
+}
+
+.ovos_counter {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex: 1;
+}
+.ovos_counter div {
+  display: flex;
+}
+.ovos_counter span {
+  color: white;
+  font-size: 14px;
+  display: flex;
+  align-items: flex-end;
+}
+.ovos_counter span.qtd_ovos_encontrados {
+  font-size: 90px;
+  height: 70px;
+  line-height: 52px;
+  overflow: hidden;
+}
+
+.progress_bar {
+  width: 70%;
+  height: 8px;
+  border: 2px solid white;
+  border-radius: 6px;
+}
+.progress_bar div {
+  background-color: white;
+  height: 100%;
+}
+
 .ovos_perdidos {
+  flex: 1;
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  overflow-y: scroll;
 }
 
 .item_ovo {
   background-color: #ddd;
-  display: flex;
   border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  display: flex;
   height: 60px;
 }
 
+.ovo_encontro_icone {
+  height: 100%;
+  box-sizing: border-box;
+  padding: 5px;
+}
 .icone_ovo {
   background-image: url("assets/16.png");
   background-size: 162px 120px;
@@ -128,4 +208,19 @@
 .icone_key {
   height: 50px;
   padding: 5px 14px;
+}
+
+.ove_dica {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.help_button {
+  height: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+}
+.help_button img {
+  height: 100%;
 }
